# CCfrag

./: .gitignore  LICENSE  README.md  pyproject.toml
CCfrag/: common.py  divider.py  extra.py  integrator.py
ccfrag/: __init__.py  divider.py  extra.py  integrator.py  testing.py
examples/: README.md
examples/EEA1/: CCfrag_pipeline.ipynb
examples/EEA1_GCN4/: CCfrag_pipeline.ipynb  EEA1.fasta
examples/EXTRA_ANALYSES/: EEA1_window_size_vs_pLDDT.ipynb  MYOSIN_window_size_vs_pLDDT.ipynb
examples/EXTRA_ANALYSES/long_CC_break_EEA1/: Figure_long_EEA1_break.ipynb
examples/EXTRA_ANALYSES/long_CC_break_Myosin/: Figure_long_Myosin_break.ipynb
examples/MACH/: CCfrag_pipeline.ipynb  MACH.fasta
examples/MYOSIN/: CCfrag_pipeline.ipynb  MYOSIN.fasta
examples/SARS_SPIKE/: CCfrag_pipeline.ipynb  SPIKE_SARS.fasta
examples/TETRABRACHION/: CCfrag_pipeline.ipynb  TETRABRACHION.fasta
examples/extra_figures/: myosin.ipynb
tests/: 0_check_disassembler.sh  check_disassembler.py  how_to_import.ipynb
